[package]
name = "compat"
version = "0.1.0"
authors = ["LeeSmet <lee.smet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
rbus = { path = ".." }
pretty_env_logger = "0.3"
rmp-serde = "0.14"
serde_bytes = "0.11"
async-trait = "0.1"
